// Use DBML to define the database structure diagram
// Docs: https://dbml.dbdiagram.io/docs

// Users data is distribute in three tables: user, user_kyc and user_cards
Table users {
  user_id varchar [primary key]
  user_name varchar [not null]
  user_lastname varchar [not null]
  phone varchar [not null, unique]
  usd_account_id varchar [not null, unique]
  nacional_id varchar [not null, unique]
  birthdate date [not null]
}
Ref: users.user_id - user_cards.user_id

Table user_cards {
  user_id varchar [primary key]
  method_id varchar [not null]
  method_name varchar [not null]
  card_num integer [not null]
  cvv_num integer [not null]
  card_name varchar [not null]
  card_lastname varchar [not null]
}


// User have a local currency account and a usd account
Table usd_accounts {
  usd_account_id varchar [primary key]
  user_id varchar [not null, unique]
  amount decimal [not null]
  currency varchar [not null]
  user_name varchar [not null]
  user_lastname varchar [not null]
}
Ref: users.user_id - usd_accounts.user_id
Ref: users.usd_account_id - usd_accounts.usd_account_id

// There are three type of transaction a user can do: deposit, payin or payout
Table deposit { 
  deposit_id varchar [primary key]
  usd_account_id varchar [not null]
  amount decimal [not null]
  currency varchar [not null]
  merchant_id varchar [not null]
  merchant_name varchar [not null]
  external_id varchar [not null, unique]
  deposit_date timestamp [not null]
}
Ref: deposit.usd_account_id - usd_accounts.usd_account_id

Table payin { 
  payin_id varchar [primary key]
  usd_account_id varchar [not null]
  amount decimal [not null]
  currency varchar [not null]
  provider_id varchar [not null]
  provider_name varchar [not null]
  external_id varchar [not null, unique]
  provider_fee integer [not null]
  payin_date timestamp [not null]
}
Ref: payin.usd_account_id - usd_accounts.usd_account_id

Table payout { 
  payout_id varchar [primary key]
  usd_account_id varchar [not null]
  amount decimal [not null]
  currency varchar [not null]
  provider_id varchar [not null]
  provider_name varchar [not null]
  external_id varchar [not null, unique]
  provider_fee integer [not null]
  payout_date timestamp [not null]
}
Ref: payout.usd_account_id - usd_accounts.usd_account_id

Table ledger { 
  ledger_id varchar [primary key]
  usd_account_id varchar [not null]
  amount decimal [not null]
  transaction_id varchar [not null, unique]
  transaction_type varchar [not null]
  created_at date [not null]
}
Ref: ledger.transaction_id - payout.payout_id
Ref: ledger.transaction_id - payin.payin_id
Ref: ledger.transaction_id - deposit.deposit_id


// There are two main type of third parties this application can interact with: merchants and financial providers
Table merchant {
  merchant_id varchar [primary key]
  merchant_name varchar [not null, unique]
  merchant_type varchar [not null]
  amount decimal [not null]
  currency varchar [not null]
  merchant_fee integer [not null]
}
Ref: merchant.merchant_id - deposit.merchant_id

Table financial_provider {
  provider_id varchar [primary key]
  provider_name varchar [not null, unique]
  provider_type varchar [not null]
  payin_status boolean [not null]
  payout_status boolean [not null]
  provider_fee integer [not null]
}
Ref: financial_provider.provider_id - payin.provider_id
Ref: financial_provider.provider_id - payout.provider_id